--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ $(function () {
 	uval = getData.val;
 });
 //====== club, opn 지정 =====
-	clb = uval.substr(0,1);
+	clb = uval;
 		
 if (clb == "a") {club = "산술애"; opn = "y";};
 if (clb == "b") {club = "부중산"; opn = "y";};
