--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ $(function () {
 	uval = getData.val;
 });
 //====== club, opn 지정 =====
+	clb = ""; club = "";
 	clb = uval;
 		
 if (clb == "a") {club = "산술애"; opn = "y";};
