--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ function fread(fn){
 		
   //--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■
   var seq = ""; //--- (산행기)  seq>"000",   "" : 전체목록표	
-  var club = ""; //--- (산악회)  "부중산", "산술애",   "all" : 전체
+  var club = ""; //--- (산악회)  "부중산", "산술애",   "" : 전체
   var opn = ""; //--- (사진공개)   "y": 전체공개, "n": 일부공개tlistg();
   //--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■
   var num = 0; 	var uval = ""; var clb = "";
@@ -138,12 +138,11 @@ $(function () {
 	uval = getData.val;
 });
 //====== club, opn 지정 =====
-	clb = ""; club = "";
 	clb = uval;
 		
 if (clb == "a") {club = "산술애"; opn = "y";};
 if (clb == "b") {club = "부중산"; opn = "y";};
-if (clb == "c") {club = "all"; opn = "y";};
+if (clb == "c") {club = ""; opn = "y";};
 			
 $(function(){
 	setTimeout(() => alplist(), 500);
@@ -190,15 +189,15 @@ function cme(){		//-- 산행사진에서 계절별 테이블로 RETURN 할때
   //========== 배열 영역 (frames) ======================
 	lists.length = 0;
 		
-	if (club=="all"){
+	if (club==""){
 	  lists = $.map(skds, function(element, index) {
-		 if (element[12] !="") {
+		 if (element[0] !=="") {
 			return [element]
 		 };
 	  });
 	}else{
 	  lists = $.map(skds, function(element, index) {
-		  if (element[10] == club) {
+		  if (element[10] === club) {
 			return [element]
 		  };
 	  });
