--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ $(function () {
 	
 //====== club, opn 지정 =====
 function cl(){		
-	clb = uval;
+	clb = uval.substr(0,1);
 	if (clb == "a") {club = "산술애"; opn = "y";};
 	if (clb == "b") {club = "부중산"; opn = "y";};
 	if (clb == "c") {club = ""; opn = "y";};
