--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ function cme(){		//-- 산행사진에서 계절별 테이블로 RETURN 할때
   	$(function() {
 	 	var txt = new Array; var tsm="";
 
-   		txt.push('<div class="contents"><div class="item s0"><button class="btn b1" onclick="tlistg();lit();">산행지List</button><h2>' + club + ' 계절별 산행사진 모음</h2></div>');
+   		txt.push('<div class="contents"><div class="item s0"><button class="btn b1" onclick="tlistg();lit();">산행지List</button><h2>' + club + ' 계절별 산행사진 모음</h2><h3> . . . by 하눌타리 이종영 </h3></div>');
   		txt.push('<div class="item s1 tit">년도</div><div class="item s2 tit">봄</div><div class="item s3 tit">여름</div><div class="item s4 tit">가을</div><div class="item s5 tit">겨울</div>'); //*--table 표 헤드부분....
 
   //========== 배열 영역 (frames) ======================
