--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
  /*------------  alplist(); ----계절별 산행사진 모음 테이블 용 css------------ */
 	h1,h2{text-align: center;}
+	h3{text-align: right;}
 	.btn{cursor:pointer;text-align:center;font-weight:bold;padding:5px;color:#f00;margin:0px 20px; position:fixed;}
 	.b1{left:150px;}
 	.contents{height:auto;display:grid;grid-gap:2px;grid-template-columns: 6fr 2fr 4fr 5fr 3fr 8fr 11fr 11fr;}
