--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ function itiner(){
 		}
 
 //================== 하단 꼬리말 footer 화면==================
- 		titin.push('</div><div class="footer"><div id="player"></div><p>끝까지 즐감해 주셔서 감사합니다......</p><br/><img src="../uni2o4o-3/iou.gif"></div></div></div>');
+ 		titin.push('</div><div class="footer"><div id="player"></div><p>끝까지 즐감해 주셔서 감사합니다......</p><br/><img src="https://hanultaree.github.io/uni2o4o/iou.gif"></div></div></div>');
 
  for (i=0; i<titin.length; i++){tsum=tsum+titin[i]};
   $(".item").hide();
