--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=0.5">
   <link rel="shortcut icon" href="#" type="image/x-icon">
   <link rel="icon" href="#" type="image/x-icon">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />        
+  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css" />
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> 
+  <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>      
 
   <style type="text/css">
 	*{margin:0;padding:0px;list-style:none;text-decoration:none;}
@@ -19,7 +23,7 @@
 	.b1{left:50px;}
 	.contents{height:auto;display:grid;grid-gap:2px;grid-template-columns: 6fr 2fr 4fr 5fr 3fr 8fr 11fr 11fr;}
 	.contents div{font-size:0.8em;}
-	.mnt:hover{color:red;cursor:pointer;}
+	.mnt:hover,.mnta:hover{color:red;cursor:pointer;}
 
 	.item.s0{grid-column:span 8;padding:30px 50px;}
 	.item.s2{grid-column:span 3;}
@@ -331,7 +335,7 @@ function cme(){		//-- 산행사진에서 계절별 테이블로 RETURN 할때
     var tag = "";
     var len = obj.length;
     for(i=0; i<obj.length; i++){
-      tag += '<div class="lit u1 data">'+obj[i][2]+'</div>'
+      tag += '<div class="lit u1 data mnta" title="' + lists[i][0] + '">'+obj[i][2]+'</div>'
       +'<div class="lit u2 data">'+obj[i][3]+'</div>'
       +'<div class="lit u3 data">'+obj[i][1]+'</div>'
       +'<div class="lit u4 data">'+obj[i][13]+'</div>'
@@ -354,6 +358,16 @@ function cme(){		//-- 산행사진에서 계절별 테이블로 RETURN 할때
 
   for (i=0; i< listxt.length; i++){lstsm=lstsm+listxt[i]};  //*--canvas <div>에 작성된 code 기록....
 	$(".container").append([lstsm]);
+		
+		$(function() {
+			$(document).on("click", ".mnta", function(){
+				seq=$(this).attr('title');  //*변수생성하여 클릭한 title을 대입
+				mcode = "mnta";
+				$(".lit").hide();
+				alprpt(seq);
+			});
+		});
+
 	});
   };
 
