--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ function cme(){		//-- 산행사진에서 계절별 테이블로 RETURN 할때
 		
 function cmea(){		//-- 산행사진에서 산행지list로 RETURN 할때
 	stopVideo();
-	$(".canvass").remove();
+	$(".canvas").remove();
 	$(".lit").show();
 };
 
@@ -401,8 +401,8 @@ function itiner(){
 					mntname = club + " " + mntname;
 				}else{opn = "n";}
 */
-	if (mcode=="mnt"){ titin.push('<div class="canvass"><div class="header"><button class="btn" onclick="cme();">RETURN</button>');	}
-	if (mcode=="mnta"){ titin.push('<div class="canvass"><div class="header"><button class="btn" onclick="cmea();">RETURN</button>'); }
+	if (mcode=="mnt"){ titin.push('<div class="canvas"><div class="header"><button class="btn" onclick="cme();">RETURN</button>');	}
+	if (mcode=="mnta"){ titin.push('<div class="canvas"><div class="header"><button class="btn" onclick="cmea();">RETURN</button>'); }
 		
         titin.push('<h2>' + mntname + ' 산행사진</h2></div><div id="canva1"><div class="slid1"><img id="image1" class="mg"></div><div class="slid2"><img id="image2" class="mg"></div><div class="slid3"><img id="image3" class="mg"></div><div class="slid4"><img id="image4" class="mg"></div><div class="slid5"><img id="image5" class="mg"></div><div class="slid6"><img id="image6" class="mg"></div></div><div class="itiner"><p class="ta">배경음악은..... <span class="tb">'+titlm+'</span> &nbsp &nbsp &nbsp <input type="button" id="volumeMute" value=" 음악on " onClick="volumeMute();"/></p><p class="tc">'+titln+'</p><ul><li>1. 산행일시 : &nbsp; ' + skds[num][1] + ' </li><li>2. 산행지 &nbsp; : &nbsp; ' + skds[num][2] + '_____' + skds[num][3] + ' </li><li>3. 산행코스 : &nbsp; ' + skds[num][4] + ' </li><li>4. 산행시간 : &nbsp; ' + skds[num][5] + ' &nbsp;(휴식/식사 시간 포함)&nbsp; </li><li class="mem">' + skds[num][7] + '</li></ul></div><div class="map"><p>↓ &nbsp; ' + skds[num][2] + ' &nbsp; 등산지도와 코스.....</p><img src="' + skds[num][6] + '"></div><div class="img">');
 
