--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ $(function(){
 function item(){		//-- 산행지list에서 계절별 테이블로 RETURN 할때
 	$(".lit").hide();
 	$(".titleTable").remove();
-	$("#data").remove();
+//	$("#data").remove();
 	$(".item").show();
 };
 function lit(){		//-- 계절별 테이블에서 산행지list로 갈때
