--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ $(function(){
  			
 function item(){		//-- 산행지list에서 계절별 테이블로 RETURN 할때
 	$(".lit").hide();
-	$(".titleTable").remove();
+//	$(".titleTable").remove();
 //	$("#data").remove();
 	$(".item").show();
 };
