--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ function fread(fn){
   var club = ""; //--- (산악회)  "부중산", "산술애",   "" : 전체
   var opn = ""; //--- (사진공개)   "y": 전체공개, "n": 일부공개tlistg();
   //--■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■
-  var num = 0; 	var uval = ""; var clb = "";
+  var num = 0; 	var uval = ""; var clb = ""; var mcode = "";
   var ctg = "" ;var c_cd = ""; var c_cd0 = ""; var c_cd1 = ""; var cod = "";
 
 //================== seq 값 읽어오기 ================
