--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	.item.s3{grid-column:span 2;}
 	.item{background:#e0ebeb;padding:5px;}
 	.tit,.s1{text-align:center;font-weight:bold;}
+	.tit{border:1px solid black;}
 
  /*------------  tlistg(); ----산행지 List 용 css------------ */
 	.lit{background:#e0ebeb;padding:0px 5px;display:none;}
