--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@ function cl(){
 	clb = uval.substr(0,1);
 	if (clb == "a") {club = "산술애"; opn = "y";};
 	if (clb == "b") {club = "부중산"; opn = "y";};
-	if (clb == "c") {club = ""; opn = "y";};
+	if (clb == "c") {club = ""; opn = "n";};
+	if (uval == "calpy") {club = ""; opn = "y";};
 };
 			
 $(function(){
