--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@ $(function () {
 	
 //====== club, opn 지정 =====
 function cl(){		
-	clb = uval.substr(0,1);
-	if (clb == "a") {club = "산술애"; opn = "y";};
-	if (clb == "b") {club = "부중산"; opn = "y";};
-	if (clb == "c") {club = ""; opn = "n";};
-	if (uval == "calpy") {club = ""; opn = "y";};
+	clb = uval.substr(0,1); opn = uval.substr(4,1);
+	if (opn == "") {opn == "y";};
+	if (clb == "a") {club = "산술애";};
+	if (clb == "b") {club = "부중산";};
+	if (clb == "c") {club = "";};
 };
 			
 $(function(){
