--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ $(function () {
 //====== club, opn 지정 =====
 function cl(){		
 	clb = uval.substr(0,1); opn = uval.substr(4,1);
-	if (opn == "") {opn == "y";};
+	if (opn == "") {opn = "y";};
 	if (clb == "a") {club = "산술애";};
 	if (clb == "b") {club = "부중산";};
 	if (clb == "c") {club = "";};
