--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
  /*------------  alprpt(); ----산행지 별 산행사진/슬라이드 용 css------------ */
 	.canvas{grid-column:span 8;background:black;border-top: 5px solid #cc9933;border-left: 5px solid #cc9933;border-right: 5px solid #663300;border-bottom: 5px solid #663300;}
 	.canvas>div{padding:3%;padding-bottom:0;color:#ffccff;background:black;}
-	#canva1{position: relative;height:360px;}
+	#canva1{position: relative;min-height:360px;width:100%;}
 	.header{padding:30px;}
 	.header>button{color:#000;font-weight:bold;}
 	 .map,.map>p,.img,.img>p,.footer,.footer>p,.main{text-align:center;font-weight:bold;font-size:0.9em;line-height:150%;}
-	  .map>img{max-width:1024px;}
+	  .map>img{max-width:100%;}
 	.ta{font-size:0.8em;text-align:center;}
 	.tb{font-size:1.3em;font-weight:bold;text-align:center;}
 	.tc{font-size:0.8em;font-weight:bold;text-align:right;line-height:140%;padding-bottom:1%;}
