--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
  /*------------  alprpt(); ----산행지 별 산행사진/슬라이드 용 css------------ */
 	.canvas{grid-column:span 8;background:black;border-top: 5px solid #cc9933;border-left: 5px solid #cc9933;border-right: 5px solid #663300;border-bottom: 5px solid #663300;}
 	.canvas>div{padding:3%;padding-bottom:0;color:#ffccff;background:black;}
-	#canva1{position: relative;min-height:360px;width:100%;}
+	#canva1{position: relative;min-height:360px;}
 	.header{padding:30px;}
 	.header>button{color:#000;font-weight:bold;}
 	 .map,.map>p,.img,.img>p,.footer,.footer>p,.main{text-align:center;font-weight:bold;font-size:0.9em;line-height:150%;}
