--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
  /*------------  alprpt(); ----산행지 별 산행사진/슬라이드 용 css------------ */
 	.canvas{grid-column:span 8;background:black;border-top: 5px solid #cc9933;border-left: 5px solid #cc9933;border-right: 5px solid #663300;border-bottom: 5px solid #663300;}
 	.canvas>div{padding:3%;padding-bottom:0;color:#ffccff;background:black;}
-	#canva1{position: relative;min-height:360px;}
+	.canva1{position: relative;min-height:180px;}
 	.header{padding:30px;}
 	.header>button{color:#000;font-weight:bold;}
 	 .map,.map>p,.img,.img>p,.footer,.footer>p,.main{text-align:center;font-weight:bold;font-size:0.9em;line-height:150%;}
@@ -58,7 +58,8 @@
 	.pcanvas>div{color:#ffccff;background:black;padding:3%;}
 	.pcanvas h2{padding-top:2%;}
 	.pcanvas button{cursor:pointer;margin:3%;color:#f00;}
-
+	@media screen and (min-width: 600px) { .canva1{min-height:360px;}}
+	  
 	.slid1{position: absolute;text-align: center;	animation:myslide 15s -12.5s ease infinite;}
 	.slid2{position: absolute;text-align: center;	animation:myslide 15s -10s ease infinite;}
 	.slid3{position: absolute;text-align: center;	animation:myslide 15s -7.5s ease infinite;}
@@ -401,7 +402,7 @@ function itiner(){
 		if (mcode=="mnt"){ titin.push('<div class="canvas"><div class="header"><button class="btn" onclick="cme();">RETURN</button>');	}
 		if (mcode=="mnta"){ titin.push('<div class="canvas"><div class="header"><button class="btn" onclick="cmea();">RETURN</button>'); }
 		
-		titin.push('<h2>' + mntname + ' 산행사진</h2></div><div id="canva1"><div class="slid1"><img id="image1" class="mg"></div><div class="slid2"><img id="image2" class="mg"></div><div class="slid3"><img id="image3" class="mg"></div><div class="slid4"><img id="image4" class="mg"></div><div class="slid5"><img id="image5" class="mg"></div><div class="slid6"><img id="image6" class="mg"></div></div><div class="itiner"><p class="ta">배경음악은..... <span class="tb">'+titlm+'</span> &nbsp &nbsp &nbsp <input type="button" id="volumeMute" value=" 음악on " onClick="volumeMute();"/></p><p class="tc">'+titln+'</p><ul><li>1. 산행일시 : &nbsp; ' + skds[num][1] + ' </li><li>2. 산행지 &nbsp; : &nbsp; ' + skds[num][2] + '_____' + skds[num][3] + ' </li><li>3. 산행코스 : &nbsp; ' + skds[num][4] + ' </li><li>4. 산행시간 : &nbsp; ' + skds[num][5] + ' &nbsp;(휴식/식사 시간 포함)&nbsp; </li><li class="mem">' + skds[num][7] + '</li></ul></div><div class="map"><p>↓ &nbsp; ' + skds[num][2] + ' &nbsp; 등산지도와 코스.....</p><img src="' + skds[num][6] + '"></div><div class="img">');
+		titin.push('<h2>' + mntname + ' 산행사진</h2></div><div id="canva1" class="canva1"><div class="slid1"><img id="image1" class="mg"></div><div class="slid2"><img id="image2" class="mg"></div><div class="slid3"><img id="image3" class="mg"></div><div class="slid4"><img id="image4" class="mg"></div><div class="slid5"><img id="image5" class="mg"></div><div class="slid6"><img id="image6" class="mg"></div></div><div class="itiner"><p class="ta">배경음악은..... <span class="tb">'+titlm+'</span> &nbsp &nbsp &nbsp <input type="button" id="volumeMute" value=" 음악on " onClick="volumeMute();"/></p><p class="tc">'+titln+'</p><ul><li>1. 산행일시 : &nbsp; ' + skds[num][1] + ' </li><li>2. 산행지 &nbsp; : &nbsp; ' + skds[num][2] + '_____' + skds[num][3] + ' </li><li>3. 산행코스 : &nbsp; ' + skds[num][4] + ' </li><li>4. 산행시간 : &nbsp; ' + skds[num][5] + ' &nbsp;(휴식/식사 시간 포함)&nbsp; </li><li class="mem">' + skds[num][7] + '</li></ul></div><div class="map"><p>↓ &nbsp; ' + skds[num][2] + ' &nbsp; 등산지도와 코스.....</p><img src="' + skds[num][6] + '"></div><div class="img">');
 
 //================== 이미지 & description 화면================
 	for (var i=0 ; i < trimgs.length ; i++ )
