--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
 	.slid6{position: absolute;text-align: center;	animation:myslide 15s ease infinite;}
 
 	@keyframes myslide{
-		0%{width:10px;height:10px;opacity: 0.0;transform:translate(490px,60px);}
-		16%{width:90px;height:60px;opacity: 0.3;transform:translate(740px,60px);}
-		33%{width:180px;height:120px;opacity: 0.8;transform:translate(800px,100px);}
-		50%{width:450px;height:300px;opacity: 1.0;transform:translate(270px,20px);}
-		67%{width:180px;height:120px;opacity: 0.8;transform:translate(10px,100px);}
-		84%{width:90px;height:60px;opacity: 0.3;transform:translate(160px,60px);}
-		100%{width:10px;height:10px;opacity: 0.0;transform:translate(490px,60px);}
+		0%{width:3.0%;height:2.0%;opacity: 0.0;transform:translate(1485%,273%);}
+		16%{width:8.2%;height:5.5%;opacity: 0.3;transform:translate(820%,100%);}
+		33%{width:16.4%;height:10.9%;opacity: 0.8;transform:translate(444%,83%);}
+		50%{width:41.0%;height:27.3%;opacity: 1.0;transform:translate(60%,7%);}
+		67%{width:16.4%;height:10.9%;opacity: 0.8;transform:translate(6%,83%);}
+		84%{width:8.2%;height:5.5%;opacity: 0.3;transform:translate(178%,100%);}
+		100%{width:3.0%;height:2.0%;opacity: 0.0;transform:translate(1485%,273%);}
 	}
 
   
